main pages alignment fix

--- a/app/assets/stylesheets/main.css.sass
+++ b/app/assets/stylesheets/main.css.sass
@@ -348,6 +348,28 @@ abbr[title=required]
       filter: progid:DXImageTransform.Microsoft.Alpha(opacity=100)
       opacity: 1
 
+.opening-container
+  display: inline-block
+  position: relative
+  vertical-align: top
+  width: 298px
+  height: 218px
+
+.opening-container-table
+  display: table
+  width: 298px
+  height: 218px
+  position: absolute
+
+.opening-container-tablecell
+  display: table-cell
+  vertical-align: middle
+  text-align: center
+
+.opening-button
+  padding: 15px
+  font-size: 17px
+
 #overlay
   background: #ffff9f
   display: none
